Colab을 통해 생성됨

--- a/python3_basic_w3school.ipynb
+++ b/python3_basic_w3school.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP3TTa6cnbH+S5zaIKj6IRd",
+      "authorship_tag": "ABX9TyODv4P900ToGvgfzwRM71ag",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -64,6 +64,387 @@
       "metadata": {
         "id": "9FA6VA3RDhd4"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if 5 > 2:\n",
+        "  print(\"five is greater than two!\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "51qlRUZ_EMrU",
+        "outputId": "a2a7d990-2cab-489b-e38e-95dc0454e1f1"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "five is greater than two!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 5\n",
+        "y = \"jonh\"\n",
+        "print(x)\n",
+        "print(y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BskvaZ4tIP_W",
+        "outputId": "3c9567f3-30f6-4fb5-cde1-c84767d70e10"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "jonh\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = str(3)\n",
+        "y = int(3)\n",
+        "z = float(3)\n",
+        "print(x)\n",
+        "print(y)\n",
+        "print(z)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cpk9KHXoIbrk",
+        "outputId": "274b022f-ab13-4626-d53b-bea1afecd59e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "3\n",
+            "3.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "myvar = \"John\"\n",
+        "my_var = \"John\"\n",
+        "_my_var = \"John\"\n",
+        "myVar = \"John\"\n",
+        "MYVAR = \"John\"\n",
+        "myvar2 = \"John\"\n",
+        "print(_my_var)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uv8Ax_ibI7ru",
+        "outputId": "eaeefc40-f32c-4809-988a-7833510a125e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "John\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x, y, z = \"orange\", \"banana\", \"cherry\"\n",
+        "print(x)\n",
+        "print(y)\n",
+        "print(z)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3WycBeMVJHME",
+        "outputId": "b51a24c0-bc59-4b62-a4d2-ccdf4d4fa4b3"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "orange\n",
+            "banana\n",
+            "cherry\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = y = z = \"Orange\"\n",
+        "print(x)\n",
+        "print(y)\n",
+        "print(z)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZP5-LIG3JpJc",
+        "outputId": "509fd4c8-a23d-4477-d966-d4f10b65ea0c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Orange\n",
+            "Orange\n",
+            "Orange\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
+        "x, y, z = fruits\n",
+        "print(x)\n",
+        "print(y)\n",
+        "print(z)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D5tq65KlJ11d",
+        "outputId": "983c7c2a-e947-406a-b0ff-dce9471d4cc0"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "apple\n",
+            "banana\n",
+            "cherry\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = \"Python\"\n",
+        "y = \"is\"\n",
+        "z = \"awesome\"\n",
+        "print(x, y, z)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vuwtDmLtJ3St",
+        "outputId": "a6d83c45-4fb8-4807-f4e2-6c43b0af5514"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Python is awesome\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = \"Python \"\n",
+        "y = \"is \"\n",
+        "z = \"awesome\"\n",
+        "print(x+y+z)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oj7J_lJuKBUt",
+        "outputId": "85b41059-398f-404f-ec67-ecf91804b7b9"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Python is awesome\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 5\n",
+        "y = 10\n",
+        "print(x + y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AoSmHo-vKTQO",
+        "outputId": "e275c461-8fd4-43c0-8303-23784a927bb5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = \"awesome\"\n",
+        "\n",
+        "def myfunc():\n",
+        "  print(\"Python is\" + x)\n",
+        "\n",
+        "myfunc()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n-TOb3NJKdsE",
+        "outputId": "2b4b2c7c-d625-4794-b778-8169dd51040c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Python isawesome\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = \"awesome\"\n",
+        "\n",
+        "def myfunc():\n",
+        "  x = \"fantastic\"\n",
+        "  print(\"Python is \" + x)\n",
+        "\n",
+        "myfunc()\n",
+        "\n",
+        "print(\"Python is \" + x)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Pi9rZydlK3TM",
+        "outputId": "a930bd5c-2428-40e9-8e83-cf39ffaf2e67"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Python is fantastic\n",
+            "Python is awesome\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def myfunc():\n",
+        "  global x\n",
+        "  x = \"fantastic\"\n",
+        "\n",
+        "myfunc()\n",
+        "\n",
+        "print(\"python is \" + x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7978kDr6LBbV",
+        "outputId": "75342015-d8ee-4567-dd8f-ebf07e59b165"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "python is fantastic\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = \"awesome\"\n",
+        "\n",
+        "def myfunc():\n",
+        "  global x\n",
+        "  x = \"fantastic\"\n",
+        "\n",
+        "myfunc()\n",
+        "\n",
+        "print(\"Python is \" + x)"
+      ],
+      "metadata": {
+        "id": "9pazsG_OLN-8"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
