Colab을 통해 생성됨

--- a/python3_basic_w3school.ipynb
+++ b/python3_basic_w3school.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyODv4P900ToGvgfzwRM71ag",
+      "authorship_tag": "ABX9TyOhYErhskkSDVmqiylwLGBs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -441,10 +441,173 @@
         "print(\"Python is \" + x)"
       ],
       "metadata": {
-        "id": "9pazsG_OLN-8"
+        "id": "9pazsG_OLN-8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "81ea117b-98dc-4b7a-d94c-6ad8015fe0fe"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Python is fantastic\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = \"Hello World\"\t#str\n",
+        "x = 20\t#int\n",
+        "x = 20.5\t#float\n",
+        "x = 1j\t#complex\n",
+        "x = [\"apple\", \"banana\", \"cherry\"]\t#list\n",
+        "x = (\"apple\", \"banana\", \"cherry\")\t#tuple\n",
+        "x = range(6)\t#range\n",
+        "x = {\"name\" : \"John\", \"age\" : 36}\t#dict\n",
+        "x = {\"apple\", \"banana\", \"cherry\"}\t#set\n",
+        "x = frozenset({\"apple\", \"banana\", \"cherry\"})\t#frozenset\n",
+        "x = True\t#bool\n",
+        "x = b\"Hello\"\t#bytes\n",
+        "x = bytearray(5)\t#bytearray\n",
+        "x = memoryview(bytes(5))\t#memoryview\n",
+        "x = None\t#NoneType\n"
+      ],
+      "metadata": {
+        "id": "2Y38RLd5Liwc"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 1    # int\n",
+        "y = 2.8  # float\n",
+        "z = 1j   # complex\n",
+        "print(type(x))\n",
+        "print(type(y))\n",
+        "print(type(z))"
+      ],
+      "metadata": {
+        "id": "DRPDW_cMMWR-",
+        "outputId": "bef25d29-8c9a-4839-9216-c5cbeb194373",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n",
+            "<class 'float'>\n",
+            "<class 'complex'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 1    # int\n",
+        "y = 2.8  # float\n",
+        "z = 1j   # complex\n",
+        "\n",
+        "#convert from int to float:\n",
+        "a = float(x)\n",
+        "\n",
+        "#convert from float to int:\n",
+        "b = int(y)\n",
+        "\n",
+        "#convert from int to complex:\n",
+        "c = complex(x)\n",
+        "\n",
+        "print(a)\n",
+        "print(b)\n",
+        "print(c)\n",
+        "\n",
+        "print(type(a))\n",
+        "print(type(b))\n",
+        "print(type(c))"
+      ],
+      "metadata": {
+        "id": "Jal-BCtXMrL0",
+        "outputId": "bf8b537c-30ad-4cbb-b6ef-2f4dd51b77e8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.0\n",
+            "2\n",
+            "(1+0j)\n",
+            "<class 'float'>\n",
+            "<class 'int'>\n",
+            "<class 'complex'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "\n",
+        "print(random.randrange(1, 10))"
+      ],
+      "metadata": {
+        "id": "Fabk0KTQM5sR",
+        "outputId": "4b61b998-163b-4502-92ea-cda323343559",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = \"Hello, World!\"\n",
+        "print(a[3])"
+      ],
+      "metadata": {
+        "id": "ECoQm8clOKD9",
+        "outputId": "7ad85842-fe04-4ed8-d311-7a41ad69c795",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "l\n"
+          ]
+        }
+      ]
     }
   ]
 }
