--- a/python3_basic_w3school.ipynb
+++ b/python3_basic_w3school.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOhYErhskkSDVmqiylwLGBs",
+      "authorship_tag": "ABX9TyMwei0U2Xf7g6mYnY+p5/Gt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -494,11 +494,11 @@
         "print(type(z))"
       ],
       "metadata": {
-        "id": "DRPDW_cMMWR-",
-        "outputId": "bef25d29-8c9a-4839-9216-c5cbeb194373",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DRPDW_cMMWR-",
+        "outputId": "bef25d29-8c9a-4839-9216-c5cbeb194373"
       },
       "execution_count": 2,
       "outputs": [
@@ -538,11 +538,11 @@
         "print(type(c))"
       ],
       "metadata": {
-        "id": "Jal-BCtXMrL0",
-        "outputId": "bf8b537c-30ad-4cbb-b6ef-2f4dd51b77e8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Jal-BCtXMrL0",
+        "outputId": "bf8b537c-30ad-4cbb-b6ef-2f4dd51b77e8"
       },
       "execution_count": 3,
       "outputs": [
@@ -568,11 +568,11 @@
         "print(random.randrange(1, 10))"
       ],
       "metadata": {
-        "id": "Fabk0KTQM5sR",
-        "outputId": "4b61b998-163b-4502-92ea-cda323343559",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Fabk0KTQM5sR",
+        "outputId": "4b61b998-163b-4502-92ea-cda323343559"
       },
       "execution_count": 6,
       "outputs": [
@@ -589,14 +589,15 @@
       "cell_type": "code",
       "source": [
         "a = \"Hello, World!\"\n",
-        "print(a[3])"
+        "print(a[3])\n",
+        "#변수의 지명하는 숫자 자리의 문자를 프린트함"
       ],
       "metadata": {
-        "id": "ECoQm8clOKD9",
-        "outputId": "7ad85842-fe04-4ed8-d311-7a41ad69c795",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ECoQm8clOKD9",
+        "outputId": "7ad85842-fe04-4ed8-d311-7a41ad69c795"
       },
       "execution_count": 10,
       "outputs": [
@@ -605,6 +606,254 @@
           "name": "stdout",
           "text": [
             "l\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = \"Hello, World!\"\n",
+        "print(len(a))\n",
+        "#문자열 길이를 알려줌"
+      ],
+      "metadata": {
+        "id": "CvtKYZDAOWld",
+        "outputId": "d2979ad8-10f0-44ad-eba0-f25d30e1977e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "13\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "txt = \"The best things in life are free!\"\n",
+        "print(\"bet\" in txt)\n",
+        "#텍스트에 내가 입력하는 문자열이 있는지 참 거짓 판단해줌"
+      ],
+      "metadata": {
+        "id": "XH4c9xjkOl72",
+        "outputId": "63d563df-e8c5-472f-ffea-a96f097fcd35",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "txt = \"The best things in life are free!\"\n",
+        "if \"e\" in txt:\n",
+        "  print(\"Yes, 'free' is present.\")"
+      ],
+      "metadata": {
+        "id": "8dddWKzKO1be",
+        "outputId": "499e5a43-8fe1-4732-c1c9-bb77f6333e05",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Yes, 'free' is present.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "txt = \"The best things in life are free!\"\n",
+        "print(\"are\" not in txt)\n",
+        "#are이 텍스트에 포함되지 않는다 = 거짓"
+      ],
+      "metadata": {
+        "id": "IHr6zAAPPBEN",
+        "outputId": "5dd70af2-eeed-439c-ed14-067abb7773e4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = \"Hello, World!\"\n",
+        "print(b[2:5])\n",
+        "#지정한 범위의 문자 출력\n",
+        "#슬라이싱"
+      ],
+      "metadata": {
+        "id": "5AFIPu9kPaON",
+        "outputId": "66d0712a-7963-4d0d-8f77-115de3a5f055",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "llo\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = \"Hello, World!\"\n",
+        "print(b[:5])"
+      ],
+      "metadata": {
+        "id": "RYo8c4yPPgn9",
+        "outputId": "332fa2e6-211d-4403-9367-a342c841ef88",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = \"Hello, World!\"\n",
+        "print(b[2:])"
+      ],
+      "metadata": {
+        "id": "YK2bDd3XPmSl",
+        "outputId": "7be303d5-eda1-44ea-fc24-cf42e45b1b90",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "llo, World!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = \"Hello, World!\"\n",
+        "print(b[-5:-2])"
+      ],
+      "metadata": {
+        "id": "htt9W0w6Pplc",
+        "outputId": "01d13d88-8394-4fb8-d041-ca0deea4807b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "orl\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = \"Hello, World!\"\n",
+        "print(a.upper())\n",
+        "#a를 대문자로 바꾼다"
+      ],
+      "metadata": {
+        "id": "mjmQ6t6-Pw6u",
+        "outputId": "cc552f01-738c-427e-fc1b-a10f1ce7f31b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "HELLO, WORLD!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = \"Hello, World!\"\n",
+        "print(a.lower())\n",
+        "#a를 소문자로 바꾼다"
+      ],
+      "metadata": {
+        "id": "_e3CivsjPzR1",
+        "outputId": "76388b08-029b-42cb-c896-abc9087972a5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello, world!\n"
           ]
         }
       ]
