Colab을 통해 생성됨

--- a/python3_basic_w3school.ipynb
+++ b/python3_basic_w3school.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMwei0U2Xf7g6mYnY+p5/Gt",
+      "authorship_tag": "ABX9TyMFIvqFvN2rjL9XdfmSQMRa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -618,11 +618,11 @@
         "#문자열 길이를 알려줌"
       ],
       "metadata": {
-        "id": "CvtKYZDAOWld",
-        "outputId": "d2979ad8-10f0-44ad-eba0-f25d30e1977e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CvtKYZDAOWld",
+        "outputId": "d2979ad8-10f0-44ad-eba0-f25d30e1977e"
       },
       "execution_count": 11,
       "outputs": [
@@ -643,11 +643,11 @@
         "#텍스트에 내가 입력하는 문자열이 있는지 참 거짓 판단해줌"
       ],
       "metadata": {
-        "id": "XH4c9xjkOl72",
-        "outputId": "63d563df-e8c5-472f-ffea-a96f097fcd35",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XH4c9xjkOl72",
+        "outputId": "63d563df-e8c5-472f-ffea-a96f097fcd35"
       },
       "execution_count": 14,
       "outputs": [
@@ -668,11 +668,11 @@
         "  print(\"Yes, 'free' is present.\")"
       ],
       "metadata": {
-        "id": "8dddWKzKO1be",
-        "outputId": "499e5a43-8fe1-4732-c1c9-bb77f6333e05",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8dddWKzKO1be",
+        "outputId": "499e5a43-8fe1-4732-c1c9-bb77f6333e05"
       },
       "execution_count": 18,
       "outputs": [
@@ -693,11 +693,11 @@
         "#are이 텍스트에 포함되지 않는다 = 거짓"
       ],
       "metadata": {
-        "id": "IHr6zAAPPBEN",
-        "outputId": "5dd70af2-eeed-439c-ed14-067abb7773e4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "IHr6zAAPPBEN",
+        "outputId": "5dd70af2-eeed-439c-ed14-067abb7773e4"
       },
       "execution_count": 20,
       "outputs": [
@@ -719,11 +719,11 @@
         "#슬라이싱"
       ],
       "metadata": {
-        "id": "5AFIPu9kPaON",
-        "outputId": "66d0712a-7963-4d0d-8f77-115de3a5f055",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5AFIPu9kPaON",
+        "outputId": "66d0712a-7963-4d0d-8f77-115de3a5f055"
       },
       "execution_count": 21,
       "outputs": [
@@ -743,11 +743,11 @@
         "print(b[:5])"
       ],
       "metadata": {
-        "id": "RYo8c4yPPgn9",
-        "outputId": "332fa2e6-211d-4403-9367-a342c841ef88",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RYo8c4yPPgn9",
+        "outputId": "332fa2e6-211d-4403-9367-a342c841ef88"
       },
       "execution_count": 22,
       "outputs": [
@@ -767,11 +767,11 @@
         "print(b[2:])"
       ],
       "metadata": {
-        "id": "YK2bDd3XPmSl",
-        "outputId": "7be303d5-eda1-44ea-fc24-cf42e45b1b90",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YK2bDd3XPmSl",
+        "outputId": "7be303d5-eda1-44ea-fc24-cf42e45b1b90"
       },
       "execution_count": 23,
       "outputs": [
@@ -791,11 +791,11 @@
         "print(b[-5:-2])"
       ],
       "metadata": {
-        "id": "htt9W0w6Pplc",
-        "outputId": "01d13d88-8394-4fb8-d041-ca0deea4807b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "htt9W0w6Pplc",
+        "outputId": "01d13d88-8394-4fb8-d041-ca0deea4807b"
       },
       "execution_count": 24,
       "outputs": [
@@ -816,11 +816,11 @@
         "#a를 대문자로 바꾼다"
       ],
       "metadata": {
-        "id": "mjmQ6t6-Pw6u",
-        "outputId": "cc552f01-738c-427e-fc1b-a10f1ce7f31b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mjmQ6t6-Pw6u",
+        "outputId": "cc552f01-738c-427e-fc1b-a10f1ce7f31b"
       },
       "execution_count": 25,
       "outputs": [
@@ -841,11 +841,11 @@
         "#a를 소문자로 바꾼다"
       ],
       "metadata": {
-        "id": "_e3CivsjPzR1",
-        "outputId": "76388b08-029b-42cb-c896-abc9087972a5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_e3CivsjPzR1",
+        "outputId": "76388b08-029b-42cb-c896-abc9087972a5"
       },
       "execution_count": 26,
       "outputs": [
@@ -857,6 +857,332 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = \"      Hello, World! \"\n",
+        "print(a.strip()) # returns \"Hello, World!\"\n",
+        "#공백 삭제해줌"
+      ],
+      "metadata": {
+        "id": "rXdhpO3DQESY",
+        "outputId": "4ba97e01-794e-4510-ca01-323cd82b85ec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, World!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = \"Hello, World!\"\n",
+        "print(a.replace(\"H\", \"J\"))\n",
+        "# H를 J로 대체"
+      ],
+      "metadata": {
+        "id": "s4y700bIQK6B",
+        "outputId": "972d4223-6046-4bf0-a3a3-5d4c28b42354",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Jello, World!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = \"Hello, World!\"\n",
+        "print(a.split(\",\")) # returns ['Hello', ' World!']\n",
+        "#한 변수에 큰 따옴표로 선언해도 작은 따옴표로 나뉘어져서 출력"
+      ],
+      "metadata": {
+        "id": "aJ_FVAFRQYn9",
+        "outputId": "5e4f6870-a068-49b1-99e4-c996b08b9f20",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Hello', ' World!']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = \"Hello\"\n",
+        "b = \"World\"\n",
+        "c = a + b\n",
+        "print(c)"
+      ],
+      "metadata": {
+        "id": "yqnAm7-LQkc-",
+        "outputId": "65e1c561-06c6-48e4-ba71-0afbf605c570",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "HelloWorld\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = \"Hello\"\n",
+        "b = \"World\"\n",
+        "c = a + \" \" + b\n",
+        "print(c)"
+      ],
+      "metadata": {
+        "id": "BbqmD-wNQ63H",
+        "outputId": "8d2596ca-b95d-462f-8ae6-b121ed357b55",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello World\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "age = 36\n",
+        "txt = f\"My name is John, I am {age}\"\n",
+        "print(txt)"
+      ],
+      "metadata": {
+        "id": "WMUoqVGnRHc1",
+        "outputId": "fb966119-8a2c-448e-8318-aa883545a47d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "My name is John, I am 36\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "price = 59\n",
+        "txt = f\"The price is {price} dollars\"\n",
+        "print(txt)"
+      ],
+      "metadata": {
+        "id": "qCXG5_QkRNAd",
+        "outputId": "c922b453-9481-4fcb-f3c6-fadacfb0b4a9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The price is 59 dollars\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "price = 59\n",
+        "txt = f\"The price is {price:.2f} dollars\"\n",
+        "print(txt)"
+      ],
+      "metadata": {
+        "id": "xmDL6JtfRRIt",
+        "outputId": "7f1dd85e-3790-4540-b089-75d6c29cda1d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The price is 59.00 dollars\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "txt = f\"The price is {20 * 59} dollars\"\n",
+        "print(txt)"
+      ],
+      "metadata": {
+        "id": "NSOM8FweRVDt",
+        "outputId": "44f81a8b-021f-48ca-8f91-ebb54f5a5b66",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The price is 1180 dollars\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "txt = \"We are the so-called \\\"Vikings\\\" from the north.\"\n",
+        "#\\'\tSingle Quote\n",
+        "#\\\\\tBackslash\n",
+        "#\\n\tNew Line\n",
+        "#\\r\tCarriage Return\n",
+        "#t\tTab\n",
+        "#\\b\tBackspace\n",
+        "#\\f\tForm Feed\n",
+        "#\\ooo\tOctal value\n",
+        "#\\xhh\tHex value"
+      ],
+      "metadata": {
+        "id": "cKJpyS_yRXsl"
+      },
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Method\tDescription\n",
+        "capitalize()\tConverts the first character to upper case\n",
+        "casefold()\tConverts string into lower case\n",
+        "center()\tReturns a centered string\n",
+        "count()\tReturns the number of times a specified value occurs in a string\n",
+        "ncode()\tReturns an encoded version of the string\n",
+        "endswith()\tReturns true if the string ends with the specified value\n",
+        "expandtabs()\tSets the tab size of the string\n",
+        "find()\tSearches the string for a specified value and returns the position of where it was found\n",
+        "format()\tFormats specified values in a string\n",
+        "format_map()\tFormats specified values in a string\n",
+        "index()\tSearches the string for a specified value and returns the position of where it was found\n",
+        "isalnum()\tReturns True if all characters in the string are alphanumeric\n",
+        "isalpha()\tReturns True if all characters in the string are in the alphabet\n",
+        "isascii()\tReturns True if all characters in the string are ascii characters\n",
+        "isdecimal()\tReturns True if all characters in the string are decimals\n",
+        "isdigit()\tReturns True if all characters in the string are digits\n",
+        "isidentifier()\tReturns True if the string is an identifier\n",
+        "islower()\tReturns True if all characters in the string are lower case\n",
+        "isnumeric()\tReturns True if all characters in the string are numeric\n",
+        "isprintable()\tReturns True if all characters in the string are printable\n",
+        "isspace()\tReturns True if all characters in the string are whitespaces\n",
+        "istitle()\tReturns True if the string follows the rules of a title\n",
+        "isupper()\tReturns True if all characters in the string are upper case\n",
+        "join()\tJoins the elements of an iterable to the end of the string\n",
+        "ljust()\tReturns a left justified version of the string\n",
+        "lower()\tConverts a string into lower case\n",
+        "lstrip()\tReturns a left trim version of the string\n",
+        "maketrans()\tReturns a translation table to be used in translations\n",
+        "partition()\tReturns a tuple where the string is parted into three parts\n",
+        "replace()\tReturns a string where a specified value is replaced with a specified value\n",
+        "rfind()\tSearches the string for a specified value and returns the last position of where it was found\n",
+        "rindex()\tSearches the string for a specified value and returns the last position of where it was found\n",
+        "rjust()\tReturns a right justified version of the string\n",
+        "rpartition()\tReturns a tuple where the string is parted into three parts\n",
+        "rsplit()\tSplits the string at the specified separator, and returns a list\n",
+        "rstrip()\tReturns a right trim version of the string\n",
+        "split()\tSplits the string at the specified separator, and returns a list\n",
+        "splitlines()\tSplits the string at line breaks and returns a list\n",
+        "startswith()\tReturns true if the string starts with the specified value\n",
+        "strip()\tReturns a trimmed version of the string\n",
+        "swapcase()\tSwaps cases, lower case becomes upper case and vice versa\n",
+        "title()\tConverts the first character of each word to upper case\n",
+        "translate()\tReturns a translated string\n",
+        "upper()\tConverts a string into upper case\n",
+        "zfill()\tFills the string with a specified number of 0 values at the beginning#"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "id": "yYa70HDqRrLe",
+        "outputId": "d76c620b-0a9b-49cd-d544-7b7ca416af3b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (ipython-input-37-1310856892.py, line 1)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-37-1310856892.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    Method\tDescription\u001b[0m\n\u001b[0m          \t^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8Nlcg3fsR0RW"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
